--- a/moment02/package.json
+++ b/moment02/package.json
@@ -11,6 +11,9 @@
   "author": "Mohamed Abokashef",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
-  }
+    "@parcel/transformer-sass": "^2.12.0",
+    "parcel": "^2.12.0",
+    "typescript": "^5.4.3"
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
