skapade redirects fil

--- a/my-angular-app/angular.json
+++ b/my-angular-app/angular.json
@@ -32,7 +32,8 @@
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
-              "src/manifest.webmanifest"
+              "src/manifest.webmanifest",
+              "src/_redirects"
             ],
             "styles": [
               "src/styles.scss"
