--- a/my-angular-app/angular.json
+++ b/my-angular-app/angular.json
@@ -33,7 +33,8 @@
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
-              "src/_redirects"
+              "src/_redirects",
+              "netlify.toml"
             ],
             "styles": [
               "src/styles.scss"
@@ -99,7 +100,9 @@
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
               "src/manifest.webmanifest",
-              "src/manifest.webmanifest"
+              "src/manifest.webmanifest",
+              "src/_redirects",
+              "netlify.toml"
             ],
             "styles": [
               "src/styles.scss"
