la till i notlify

--- a/my-angular-app/netlify.toml
+++ b/my-angular-app/netlify.toml
@@ -2,7 +2,7 @@
 [build]
 base = "/"
 command = "ng build"
-publish = "/dist/my-angular-app/browser
+publish = "/dist/my-angular-app/browser"
 
 
 [[redirects]]
