--- a/my-angular-app/netlify.toml
+++ b/my-angular-app/netlify.toml
@@ -1,7 +1,7 @@
 
 [build]
 base = "/"
-command = "ng build"
+command = "npm install --legacy-peer-deps && ng build --prod"
 publish = "/dist/my-angular-app/browser"
 
 
