--- a/my-angular-app/netlify.toml
+++ b/my-angular-app/netlify.toml
@@ -1,13 +1,9 @@
-
 [build]
-    base = "/"
-    command = "npm run build"
-    publish = "dist/my-angular-app/browser"
-
+  base = "/"
+  command = "ng build --configuration production"
+  publish = "dist/my-angular-app/browser"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-
