--- a/my-angular-app/package.json
+++ b/my-angular-app/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm install && ng build",
-    "build": "ng build",
+    "start": "ng serve",
+    "build": "npm install && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
